Add PUT /groups/{groupId}
